Prep to add spritz

--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -26,6 +26,7 @@
   {# use the CDN to get bootstrap css. can not be inside compress css block #}
   {% block cdn_css %}
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/css/bootstrap.min.css">
+<!--   <link rel="stylesheet" href="http://bootswatch.com/cyborg/bootstrap.min.css"> -->
   {% endblock cdn_css %}
 
   {% compress css %}
@@ -87,17 +88,17 @@
 
     <p>By <a href="http://github.com/miserlou" target="_blank">@miserlou</a> and <a href="http://twitter.com/onlyinamerica" target="_blank">@onlyinamerica</a>.</p>
     <p>Maintained by the <a href="https://github.com/glance?tab=members">core team</a> with the help of <a href="https://github.com/glance/glanceweb/graphs/contributors">our contributors</a>.</p>
-    <p>Code licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank">MIT</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+    <p>Code licensed under <a href="http://github.com/miserlo" target="_blank">MIT</a>.</p>
     <ul class="bs-docs-footer-links muted">
       <li>Currently v0.0.0</li>
       <li>&middot;</li>
       <li><a href="https://github.com/glance/glanceweb">GitHub</a></li>
       <li>&middot;</li>
-      <li><a href="../about/">About</a></li>
+      <li><a href="/about/">About</a></li>
       <li>&middot;</li>
       <li><a href="http://expo.getbootstrap.com">Contact</a></li>
       <li>&middot;</li>
-      <li><a href="http://blog.getbootstrap.com">Blog</a></li>
+      <li><a href="http://gun.io/">Gun.io</a></li>
     </ul>
   </div>
 </footer>
