--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -26,7 +26,7 @@
   {# use the CDN to get bootstrap css. can not be inside compress css block #}
   {% block cdn_css %}
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/css/bootstrap.min.css">
-<!--   <link rel="stylesheet" href="http://bootswatch.com/cyborg/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="http://bootswatch.com/cyborg/bootstrap.min.css">
   {% endblock cdn_css %}
 
   {% compress css %}
